--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -25,21 +25,21 @@
 
     &__list-link {
         color: $title;
-        @extend %quicksand-400;
-        padding-bottom: 1px;
+        padding-bottom: 0 2px 1px;
         transition: all .3s;
+        @extend %roboto-400;
 
         &:hover {
             color: $accent;
-            @extend %quicksand-500;
             border-bottom: 1px solid $accent;
+            @extend %roboto-700;
         }
     }
 
     &__list-link--active {
         color: $accent;
-        @extend %quicksand-500;
         border-bottom: 1px solid $accent;
+        @extend %roboto-700;
     }
 }
 
@@ -140,6 +140,9 @@
         margin-bottom: 14px;
         display: block;
     }
+    &__text {
+        margin-bottom: 20px;
+    }
     &__form-input {
         background-color: #fff;
         max-width: 320px;
@@ -153,19 +156,15 @@
         }
     }
     &__form-btn {
-        border: none;
-        background-color: $accent;
-        color: #fff;
-        text-transform: uppercase;
-        padding: 12px 26px;
-        box-shadow: 0px 7px 20px 0px rgba(255, 17, 48, 0.3);
+        @extend %btn;
+
         cursor: pointer;
     }
 }
 
 
 .footer-bottom {
-    height: 275px;
+    height: 200px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -174,5 +173,78 @@
         display: inline;
         margin-left: 25px;
         vertical-align: middle;
+    }
+}
+
+.top-slider {
+    background-image: url('../images/slider/slider-bg.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-color: $bg;
+    padding-top: 65px;
+    &__container {
+        max-width: 1560px;
+    }
+    &__item {
+        display: flex !important;
+        justify-content: space-between;
+    }
+    &__content {
+        padding-left: 175px;
+        padding-top: 125px;
+    }
+    &__title {
+        max-width: 670px;
+        font-size: 58px;
+        line-height: 68px;
+        color: $title;
+        @extend %roboto-700;
+        margin-bottom: 35px;
+    }
+    &__text {
+        max-width: 470px;
+        margin-bottom: 55px;
+    }
+    &__link {
+        @extend %btn;
+        padding: 14px 36px;
+    }
+    .slick-dots {
+        display: flex;
+        justify-content: center;
+        margin-top: -70px;
+        li {
+            padding: 0 5px;
+            line-height: 0;
+            button {
+                padding: 0;
+                font-size: 0;
+                background-color: transparent;
+                width: 26px;
+                height: 26px;
+                border-radius: 50%;
+                border: 1px solid transparent;
+                position: relative;
+                &::before {
+                    position: absolute;
+                    content: '';
+                    width: 6px;
+                    height: 6px;
+                    border-radius: 50%;
+                    background-color: $default;
+                    top: 50%;
+                    left: 50%;
+                    transform:  translate(-50%, -50%);
+                }
+            }
+            &.slick-active {
+                button {
+                    border-color: $accent;
+                    &::before {
+                        background-color: $accent;
+                    }
+                }
+            }
+        }
     }
 }
