--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -101,7 +101,7 @@
     &__address,
     &__email,
     &__phone {
-        margin-bottom: 14qa1    Zpx;
+        margin-bottom: 14qa1 Zpx;
         display: block;
     }
 
@@ -136,13 +136,16 @@
         line-height: 1;
         margin-bottom: 40px;
     }
+
     &__link {
         margin-bottom: 14px;
         display: block;
     }
+
     &__text {
         margin-bottom: 20px;
     }
+
     &__form-input {
         background-color: #fff;
         max-width: 320px;
@@ -150,11 +153,13 @@
         border: none;
         padding: 12px 10px 12px 15px;
         box-shadow: 0px 7px 20px 0px rgba(192, 192, 192, 0.3);
+
         &::placeholder {
             color: $default;
             font-size: 16px;
         }
     }
+
     &__form-btn {
         @extend %btn;
 
@@ -169,6 +174,7 @@
     justify-content: space-between;
     align-items: center;
     font-size: 12px;
+
     &__accept-img {
         display: inline;
         margin-left: 25px;
@@ -182,17 +188,21 @@
     background-size: cover;
     background-color: $bg;
     padding-top: 65px;
+
     &__container {
         max-width: 1560px;
     }
+
     &__item {
         display: flex !important;
         justify-content: space-between;
     }
+
     &__content {
         padding-left: 175px;
         padding-top: 125px;
     }
+
     &__title {
         max-width: 670px;
         font-size: 58px;
@@ -201,21 +211,26 @@
         @extend %roboto-700;
         margin-bottom: 35px;
     }
+
     &__text {
         max-width: 470px;
         margin-bottom: 55px;
     }
+
     &__link {
         @extend %btn;
         padding: 14px 36px;
     }
+
     .slick-dots {
         display: flex;
         justify-content: center;
         margin-top: -70px;
+
         li {
             padding: 0 5px;
             line-height: 0;
+
             button {
                 padding: 0;
                 font-size: 0;
@@ -225,6 +240,7 @@
                 border-radius: 50%;
                 border: 1px solid transparent;
                 position: relative;
+
                 &::before {
                     position: absolute;
                     content: '';
@@ -234,17 +250,135 @@
                     background-color: $default;
                     top: 50%;
                     left: 50%;
-                    transform:  translate(-50%, -50%);
+                    transform: translate(-50%, -50%);
                 }
             }
+
             &.slick-active {
                 button {
                     border-color: $accent;
+
                     &::before {
                         background-color: $accent;
                     }
                 }
             }
         }
+    }
+}
+
+.categories-info {
+    padding: 120px 0;
+}
+
+.info {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 110px;
+    position: relative;
+    &::before,
+    &::after {
+        content: '';
+        position: absolute;
+        z-index: -1;
+    }
+    &::before {
+        background-image: url('../images/decor/info-after.svg');
+        top: -40px;
+        left: -45px;
+        width: 120px;
+        height: 121px;
+    }
+    &::after {
+        background-image: url('../images/decor/info-before.svg');
+        bottom: -23px;
+        right: -23px;
+        width: 62px;
+        height: 52px;
+    }
+    &__item {
+        background-color: #fff;
+        padding: 60px 30px;
+        width: 370px;
+        box-shadow: 20px 0px 60px 0px rgba(202, 202, 202, 0.35);
+    }
+
+    &__item-title {
+        margin: 35px 0 10px;
+        color: $title;
+        font-size: 22px;
+        @extend %roboto-400;
+    }
+}
+
+.categories {
+    &__items {
+        display: grid;
+        min-height: 635px;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+        grid-gap: 30px;
+    }
+
+    &__item {
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center center;
+        padding-top: 35px;
+        padding-left: 40px;
+
+        &:nth-child(1) {
+            grid-row: span 2;
+
+            .categories__item-subtitle,
+            .categories__link:hover {
+                color: #5800e4;
+            }
+        }
+
+        &:nth-child(2) {
+            grid-column: span 2;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            padding-top: 0;
+            .categories__item-subtitle,
+            .categories__link:hover {
+                color: $accent;
+            }
+        }
+
+        &:nth-child(3) {
+
+            .categories__item-subtitle,
+            .categories__link:hover {
+                color: #ffb534;
+            }
+        }
+
+        &:nth-child(4) {
+
+            .categories__item-subtitle,
+            .categories__link:hover {
+                color: #34c3ff;
+            }
+        }
+    }
+
+    &__item-subtitle {
+        margin-bottom: 5px;
+    }
+
+    &__item-title {
+        font-size: 22px;
+        color: $title;
+        margin-bottom: 16px;
+    }
+
+    &__link {
+        text-transform: uppercase;
+        color: $title;
+        @extend %roboto-400;
+        transition: all .3s;
     }
 }
