added product section

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -276,12 +276,14 @@
     justify-content: space-between;
     margin-bottom: 110px;
     position: relative;
+
     &::before,
     &::after {
         content: '';
         position: absolute;
         z-index: -1;
     }
+
     &::before {
         background-image: url('../images/decor/info-after.svg');
         top: -40px;
@@ -289,6 +291,7 @@
         width: 120px;
         height: 121px;
     }
+
     &::after {
         background-image: url('../images/decor/info-before.svg');
         bottom: -23px;
@@ -296,6 +299,7 @@
         width: 62px;
         height: 52px;
     }
+
     &__item {
         background-color: #fff;
         padding: 60px 30px;
@@ -342,6 +346,7 @@
             flex-direction: column;
             justify-content: center;
             padding-top: 0;
+
             .categories__item-subtitle,
             .categories__link:hover {
                 color: $accent;
@@ -390,9 +395,11 @@
     background-position: top center;
     background-repeat: no-repeat;
     padding: 125px 0;
+
     &__inner {
         display: flex;
     }
+
     &__popup {
         margin-right: 60px;
         max-width: 530px;
@@ -405,9 +412,11 @@
         background-position: center center;
         background-size: cover;
     }
+
     &__content {
         max-width: 570px;
     }
+
     &__subtitle {
         padding-top: 75px;
         font-size: 22px;
@@ -415,14 +424,140 @@
         text-transform: uppercase;
         margin-bottom: 5px;
     }
+
     &__title {
         text-align: left;
 
     }
+
     &__text {
         margin-bottom: 55px;
     }
+
     &__link {
         @extend %btn;
     }
+}
+
+.product {
+    padding: 105px 0 120px;
+    text-align: center;
+
+    &__items {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-gap: 45px 30px;
+    }
+    &__link {
+        text-transform: uppercase;
+        color: $title;
+        display: inline-block;
+        border: 1px solid $accent;
+        padding: 14px 27px;
+        margin-top: 55px;
+    }
+}
+
+.product-item {
+    max-width: 370px;
+
+    &__img-box {
+        position: relative;
+        height: 370px;
+        overflow: hidden;
+        margin-bottom: 25px;
+    }
+
+    &__link-box {
+        position: absolute;
+        left: 0;
+        right: 0;
+        bottom: 50px;
+        background-color: #fff;
+        width: 220px;
+        height: 50px;
+        margin: 0 auto;
+        border-radius: 22px;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        transform: translateY(300%);
+        transition: all .3s;
+    }
+
+    &__link--line::before,
+    &__link--line::after {
+        content: '';
+        position: absolute;
+        background-color: #fff;
+        width: 1px;
+        height: 30px;
+        background-color: #ececec;
+        top: 10px;
+    }
+
+    &__link--line::before {
+        left: 70px;
+    }
+
+    &__link--line::after {
+        right: 70px;
+    }
+
+    &__link {
+        display: inherit;
+
+        path {
+            transition: all .3s;
+        }
+    }
+
+    &__link:hover {
+        path {
+            color: $accent;
+        }
+    }
+
+    &__images {
+        object-fit: cover;
+    }
+
+    &:hover {
+        .product-item__link-box {
+            transform: translateY(0);
+        }
+    }
+
+    &__title {
+        color: $title;
+        padding: 15px 0 20px;
+    }
+
+    &__price {
+        display: flex;
+        justify-content: center;
+        @extend %roboto-400;
+    }
+    &__new-price {
+        padding: 0 12px;
+        color: $title;
+    }
+    &__old-price {
+        padding: 0 12px;
+        text-decoration: line-through;
+    }
+    &--sale {
+        .product-item__img-box::before {
+            content: 'SALE';
+            @extend %btn;
+            position: absolute;
+            top: 25px;
+            left: 25px;
+            line-height: 1;
+        }
+    }
+}
+
+.star {
+    margin: 0 auto;
 }
