--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -460,6 +460,7 @@
         grid-template-columns: repeat(3, 1fr);
         grid-gap: 45px 30px;
     }
+
     &__link {
         text-transform: uppercase;
         color: $title;
@@ -550,14 +551,17 @@
         justify-content: center;
         @extend %roboto-400;
     }
+
     &__new-price {
         padding: 0 12px;
         color: $title;
     }
+
     &__old-price {
         padding: 0 12px;
         text-decoration: line-through;
     }
+
     &--sale {
         .product-item__img-box::before {
             content: 'SALE';
@@ -581,22 +585,26 @@
     background-position: center center;
     padding: 150px 0 160px;
     text-align: center;
+
     &__inner {
         max-width: 570px;
         width: 100%;
         margin-left: auto;
     }
+
     &__subtitle {
         color: $accent;
         text-transform: uppercase;
         margin-bottom: 10px;
         font-size: 22px;
     }
+
     &__clock {
         display: flex;
         justify-content: space-between;
         margin-top: 55px;
     }
+
     &__clock-item {
         background-color: #fff;
         width: 120px;
@@ -607,6 +615,7 @@
         justify-content: center;
         text-align: center;
         box-shadow: 0px 10px 40px 0px rgba(187, 187, 187, 0.3);
+
         span {
             font-size: 48px;
             @extend %roboto-400;
@@ -614,6 +623,7 @@
             color: $title;
         }
     }
+
     &__link {
         text-transform: uppercase;
         color: $title;
@@ -626,6 +636,7 @@
 
 .partners {
     padding-top: 75px;
+
     &__list {
         height: 170px;
         display: flex;
@@ -639,10 +650,12 @@
     background-image: url('../images/decor/blog-bg.svg');
     background-repeat: no-repeat;
     background-position: center center;
+
     &__items {
         display: flex;
         justify-content: space-between;
         position: relative;
+
         &::after {
             content: '';
             position: absolute;
@@ -654,39 +667,49 @@
             background-image: url('../images/decor/blog-decor.svg');
         }
     }
+
     &__item {
         max-width: 370px;
         border: 1px solid #ececec;
+
         &:hover {
             box-shadow: 20px 0px 60px 0px rgba(202, 202, 202, 0.35);
             border: none;
+
             .blog__item-link {
                 color: $accent;
+
                 &::after {
                     background-image: url('../images/icons/blog-arrow-active.svg');
                 }
             }
         }
     }
+
     &__item-imglink {
         display: block;
+
         img {
             height: 288px;
             object-fit: cover;
         }
     }
+
     &__item-box {
         padding: 30px 40px;
     }
+
     &__item-info {
         display: flex;
         justify-content: space-between;
         margin-bottom: 20px;
     }
+
     &__item-author,
     &__item-date {
         padding-left: 30px;
         position: relative;
+
         &::before {
             content: '';
             position: absolute;
@@ -696,21 +719,26 @@
             top: 4px;
         }
     }
+
     &__item-author::before {
         background-image: url('../images/icons/blog-user.svg');
     }
+
     &__item-date::before {
         background-image: url('../images/icons/blog-time.svg');
     }
+
     &__item-title {
         color: $title;
         @extend %roboto-400;
         font-size: 22px;
         margin-bottom: 20px;
     }
+
     &__item-link {
         position: relative;
     }
+
     &__item-link::after {
         content: '';
         position: absolute;
@@ -726,10 +754,12 @@
     padding-top: 100px;
     max-width: 570px;
     margin: 0 auto 115px;
+
     &__links {
         text-align: center;
         margin-bottom: 40px;
     }
+
     &__link {
         color: #909090;
         font-size: 22px;
@@ -737,13 +767,16 @@
         text-transform: uppercase;
         margin: 0 30px;
     }
+
     &__link--active {
         color: $accent;
     }
+
     &__label {
         margin-bottom: 30px;
         display: block;
     }
+
     &__input {
         display: block;
         width: 100%;
@@ -753,6 +786,7 @@
         height: 60px;
         padding: 0 15px;
     }
+
     &__btn {
         display: block;
         background-color: $title;
@@ -765,11 +799,13 @@
         display: block;
         width: 100%;
     }
+
     &__error {
         margin-top: 12px;
         color: $accent;
         display: inline-block;
     }
+
     &__text {
         margin-bottom: 25px;
     }
@@ -777,25 +813,30 @@
 
 .page-404 {
     padding: 110px 0 120px;
+
     &__inner {
         display: flex;
         justify-content: space-between;
         align-items: center;
     }
+
     &__content {
         max-width: 570px;
         width: 100%;
     }
+
     &__title {
         color: #28384f;
         margin-bottom: 40px;
         @extend %roboto-700;
         font-size: 48px;
     }
+
     &__text {
         margin-bottom: 55px;
         max-width: 470px;
     }
+
     &__link {
         background-color: $accent;
         text-transform: uppercase;
@@ -803,5 +844,249 @@
         padding: 14px 35px;
         @extend %roboto-400;
         box-shadow: 0px 5px 25px 0px rgba(254, 62, 87, 0.35);
+    }
+}
+
+.shop {
+    padding: 120px 0 105px;
+
+    &__inner {
+        display: flex;
+    }
+
+    &__filters {
+        width: 370px;
+        margin-right: 30px;
+    }
+}
+
+
+.filter {
+    &__item {
+        padding: 35px 30px 40px;
+        border: 1px solid #ececec;
+        margin-bottom: 40px;
+    }
+
+    &__title {
+        text-transform: uppercase;
+        color: $title;
+        font-size: 22px;
+        @extend %roboto-400;
+        margin-bottom: 25px;
+    }
+}
+
+.filter-search {
+    &__form {
+        display: flex;
+    }
+
+    &__input {
+        border: none;
+        background-color: $bg;
+        width: 260px;
+        height: 50px;
+        padding: 0 5px 0 15px;
+    }
+
+    &__btn {
+        border: none;
+        background-color: $accent;
+        height: 50px;
+        width: 50px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+    }
+}
+
+
+.filter-price {
+    &__label {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding-top: 30px
+    }
+
+    &__btn {
+        @extend %btn;
+        border: none;
+        cursor: pointer;
+    }
+}
+
+.irs--flat .irs-line {
+    top: 13px;
+    height: 5px;
+    background-color: #ececec;
+    border-radius: 0;
+}
+
+.irs--flat .irs-handle {
+    top: 0px;
+    width: 30px;
+    height: 30px;
+    background-color: #fff;
+    box-shadow: 0px 0px 13px 0px rgba(90, 90, 90, 0.2);
+}
+
+.irs--flat .irs-handle>i:first-child {
+    display: none;
+}
+
+.irs--flat .irs-bar {
+    top: 13px;
+    height: 12px;
+    background-color: $accent;
+}
+
+.irs-from,
+.irs-to,
+.irs-single {
+    display: none;
+}
+
+.irs--flat .irs-min,
+.irs--flat .irs-max {
+    display: none;
+}
+
+.irs--flat {
+    height: 30px;
+}
+
+.filter-color {
+    &__label {
+        padding-bottom: 20px;
+        border-bottom: 1px solid #ececec;
+        display: flex;
+        justify-content: space-between;
+
+        &+.filter-color__label {
+            padding-top: 20px;
+        }
+
+        &:last-child {
+            border-bottom: none;
+            padding-bottom: 0;
+        }
+    }
+
+    &__input {
+        @extend %checkbox-hidden;
+        &:checked+.filter-color__checkbox {
+            background-image: url('../images/icons/checked-icon.svg');
+            background-repeat: no-repeat;
+            background-position: center;
+        }
+    }
+
+    &__checkbox {
+        width: 16px;
+        height: 16px;
+        position: absolute;
+        margin-left: -16px;
+        margin-top: 7px;
+    }
+
+    &__checkbox--blue {
+        background-color: #00aeef;
+    }
+
+    &__checkbox--red {
+        background-color: #f52574;
+    }
+
+    &__checkbox--green {
+        background-color: #24d4ac;
+    }
+
+    &__checkbox--orange {
+        background-color: #ff7e00;
+    }
+
+    &__checkbox--black {
+        background-color: #000;
+    }
+
+    &__checkbox--purple {
+        background-color: #923899;
+    }
+}
+
+.filter-size {
+    &__label {
+        padding-left: 35px;
+        margin-bottom: 20px;
+        display: block
+    }
+    &__input {
+        @extend %checkbox-hidden;
+        &:checked + .filter-size__checkbox {
+            background-image: url('../images/icons/checkedmark.svg');
+            border: none;
+            & + .filter-size__text {
+                color: $accent;
+            }
+        }
+    }
+    &__checkbox {
+        width: 20px;
+        height: 20px;
+        border: 1px solid $default;
+        position: absolute;
+        margin-left: -35px;
+        margin-top: 3px;
+        border-radius: 50%;
+    }
+}
+
+.filter-category {
+    &__label {
+        margin-bottom: 15px;
+        display: block;
+        cursor: pointer;
+        &:last-child {
+            margin-bottom: 0;
+        }
+    }
+    &__input {
+        @extend %checkbox-hidden;
+        &:checked + .filter-category__checkbox {
+            background-color: $accent;
+            color: #fff;
+        }
+    }
+    &__checkbox {
+        background-color: #f6f6f6;
+        color: $title;
+        display: flex;
+        justify-content: space-between;
+        padding: 16px 20px;
+    }
+}
+
+.filter-popular {
+    &__label {
+        display: inline-block;
+        margin-bottom: 20px;
+        margin-right: 8px;
+        cursor: pointer;
+        padding: 10px 0;
+    }
+    &__input {
+        @extend %checkbox-hidden;
+        &:checked + .filter-popular__checkbox {
+            background-color: $accent;
+            border-color: $accent;
+            color: #fff;
+        }
+    }
+    &__checkbox {
+        border: 1px solid $default;
+        padding: 10px 20px;
     }
 }
