--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -32,7 +32,8 @@ $bg: #f6f6f6;
     box-shadow: 0px 7px 20px 0px rgba(255, 17, 48, 0.3);
 }
 
-%checkbox-hidden {
+%checkbox-hidden,
+%radio-hidden{
     width: 1;
     height: 1;
     overflow: hidden;
