--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -479,6 +479,7 @@
         min-width: 100%;
         display: flex;
         text-align: left;
+
         &:hover {
             .product-item__link-box {
                 transform: translateY(-280%);
@@ -489,24 +490,29 @@
             height: 250px;
             min-width: 200px;
             margin-bottom: 0;
+
             img {
                 height: 250px;
             }
         }
+
         .product-item__text {
             margin-bottom: 25px;
         }
+
         .product-item__btn {
             color: #fff;
             padding: 11px 40px;
             background-color: $title;
             border: none;
             cursor: pointer;
+
             &:hover {
                 background-color: $accent;
                 box-shadow: 0px 7px 20px 0px rgba(255, 17, 48, 0.3);
             }
         }
+
         .product-item__link-box {
             background-color: transparent;
             width: 115px;
@@ -528,35 +534,43 @@
                 display: none;
             }
         }
+
         .product-item__content-box {
             display: block;
         }
+
         .product-item__title {
             order: -1;
             width: 100%;
             padding: 0;
             margin-bottom: 10px;
         }
+
         .product-item__price {
             order: -1;
             margin-left: -12px;
         }
+
         .star {
             margin-left: 23px;
         }
+
         .product-item__box {
             display: flex;
             flex-wrap: wrap;
         }
+
         .product-item__wrapper-box {
             padding: 30px 40px;
             border: 1px solid #ececec;
             border-left: none;
         }
     }
+
     &__content-box {
         display: none;
     }
+
     &__img-box {
         position: relative;
         height: 370px;
@@ -1194,6 +1208,7 @@
         justify-content: space-between;
         flex-wrap: wrap;
         border-bottom: 1px solid #ececec;
+
         .product-item {
             margin-bottom: 40px;
         }
@@ -1263,4 +1278,279 @@
 
 .jq-selectbox__dropdown {
     top: 31.418px;
+}
+
+.product-page {
+    padding: 120px 0 60px;
+    border-bottom: 1px solid #f0f0f0;
+}
+
+.product-one {
+    &__inner {
+        display: flex;
+    }
+
+    &__slide {
+        width: 730px;
+        margin-right: 70px;
+    }
+
+    &__content {
+        width: 370px;
+    }
+
+    &__title {
+        margin-bottom: 20px;
+        color: $title;
+        font-size: 20px;
+    }
+
+    &__box {
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 25px;
+    }
+
+    &__price {
+        display: flex;
+        font-size: 18px;
+    }
+
+    &__price-new {
+        color: $title;
+    }
+
+    &__price-old {
+        padding-left: 15px;
+        text-decoration: line-through;
+    }
+
+    &__item-star {
+        display: flex;
+        align-items: center;
+
+        span {
+            padding-left: 8px;
+            color: $title;
+            font-size: 22px;
+        }
+    }
+
+    &__item-text {
+        margin-bottom: 30px;
+
+        span {
+            display: block;
+            color: $title;
+            @extend %roboto-400;
+            font-size: 18px;
+        }
+    }
+
+    &__item-btn {
+        @extend %btn;
+        border: none;
+        margin-left: 15px;
+        cursor: pointer;
+    }
+}
+
+.jq-number__field {
+    width: 114px;
+    border: 1px solid #f0f0f0;
+    transform: translateY(1px);
+
+}
+
+.jq-number__field input {
+    width: 100%;
+    height: 50px;
+    border: none;
+    outline: none;
+    @extend %quicksand-500;
+    color: $title;
+    text-align: center;
+}
+
+.jq-number {
+    padding: 0;
+    position: relative;
+}
+
+.jq-number__spin {
+    position: absolute;
+    cursor: pointer;
+    width: 12px;
+    height: 12px;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.jq-number__spin.minus {
+    left: 15px;
+}
+
+.jq-number__spin.plus {
+    right: 15px;
+}
+
+
+.jq-number__spin::after {
+    content: '';
+    position: absolute;
+    top: 6px;
+    left: 0;
+    background-color: $title;
+    width: 12px;
+    height: 1px;
+}
+
+.jq-number__spin.plus::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 6px;
+    background-color: $title;
+    width: 1px;
+    height: 12px;
+}
+
+
+.product-info {
+    &__list {
+        margin-bottom: 30px;
+    }
+
+    &__item {
+        margin-bottom: 5px;
+        display: flex;
+    }
+
+    &__title {
+        min-width: 100px;
+        color: $title;
+    }
+
+    &__text {}
+
+    &__link {
+        path {
+            fill: $default;
+        }
+
+        &+.product-info__link {
+            margin-left: 15px;
+        }
+
+        &:hover {
+            path {
+                fill: $accent;
+            }
+        }
+    }
+}
+
+.product-slide {
+    display: flex;
+    .slick-vertical .slick-slide {
+        height: 140px;
+        margin-bottom: 30px;
+    }
+    &__thumb {
+        width: 140px;
+        margin-right: 30px;
+    }
+
+    &__thumb-item {
+        margin-bottom: 30px;
+        width: 140px;
+        height: 140px;
+        cursor: pointer;
+
+        img {
+            width: 140px;
+            height: 140px;
+            object-fit: cover;
+        }
+    }
+
+    &__big {
+        width: 560px;
+
+        img {
+            width: 560px;
+            height: 650px;
+            object-fit: cover;
+        }
+    }
+}
+
+.product-filter {
+    &__color {
+        margin-bottom: 25px;
+
+        label {
+            margin-right: 10px;
+        }
+    }
+
+    &__color-input {
+        @extend %radio-hidden;
+
+        &:checked {
+            &+.product-filter__color-checkbox {
+                border-color: $accent;
+            }
+        }
+    }
+
+    &__color-checkbox {
+        width: 24px;
+        height: 24px;
+        cursor: pointer;
+        border: 1px solid #ccccce;
+        position: relative;
+        display: inline-block;
+
+        span {
+            position: absolute;
+            display: inline-block;
+            width: 16px;
+            height: 16px;
+            top: 3px;
+            left: 3px;
+        }
+    }
+
+    &__color-title,
+    &__size-title {
+        margin-bottom: 5px;
+        font-size: 18px;
+        color: $title;
+        @extend %roboto-400;
+    }
+
+    &__size {
+        margin-bottom: 35px;
+
+        label {
+            margin-right: 10px;
+            display: inline-block;
+        }
+    }
+
+    &__size-input {
+        @extend %radio-hidden;
+
+        &:checked {
+            &+.product-filter__size-checkbox {
+                border-color: $accent;
+            }
+        }
+    }
+    &__size-checkbox {
+        padding: 4px 12px;
+        border: 1px solid #ececec;
+        display: inline-block;
+    }
 }
