--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1554,3 +1554,87 @@
         display: inline-block;
     }
 }
+
+.product-tabs {
+    padding-top: 110px;
+    &__top {
+        border-bottom: 1px solid #f0f0f0;
+        margin-bottom: 40px;
+        @extend %roboto-400;
+        font-size: 22px;
+    }
+    &__top-item {
+        display: inline-block;
+        margin-bottom: 10px;
+        & + .product-tabs__top-item {
+            margin-left: 55px;
+        }
+    }
+    &__top-item--active {
+        color: $title;
+        position: relative;
+        &::before {
+            content: '';
+            position: absolute;
+            bottom: -11px;
+            left: 0;
+            right: 0;
+            width: 100%;
+            height: 1px;
+            background-color: $accent;
+        }
+    }
+    &__content-item {
+        display: none;
+        &.product-tabs__content-item--active {
+            display: block;
+        }
+    }
+}
+
+.comments {
+    margin-bottom: 40px;
+    display: flex;
+    &__img {
+        margin-right: 30px;
+        min-width: 71px;
+        height: 71px;
+        border-radius: 50%;
+        overflow: hidden;
+        object-fit: cover;
+    }
+    &__content-top {
+        display: flex;
+        margin-bottom: 10px;
+    }
+    &__content-name {
+        color: $title;
+        margin-right: 13px;
+        @extend %roboto-400;
+    }
+    &__content-date {
+        padding-left: 13px;
+        border-left: 1px solid $default;
+    }
+    &__content-star {
+        margin-left: auto;
+        margin-right: 0;
+    }
+    &__content-text {
+        margin-bottom: 10px;
+    }
+    &__content-reply {
+        display: inline-block;
+        padding-left: 25px;
+        position: relative;
+        &::before {
+            content: "";
+            position: absolute;
+            left: 0;
+            top: 7px;
+            width: 15px;
+            height: 13px;
+            background-image: url('../images/icons/comment-reply-icon.svg');
+        }
+    }
+}
