--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1281,8 +1281,8 @@
 }
 
 .product-page {
-    padding: 120px 0 60px;
-    border-bottom: 1px solid #f0f0f0;
+    padding: 120px 0 0;
+
 }
 
 .product-one {
@@ -1658,6 +1658,8 @@
 }
 
 .comments-form {
+    border: 1px solid #f0f0f0;
+    padding-bottom: 60px;
     &__title {
         color: $title;
         font-size: 22px;
@@ -1734,5 +1736,20 @@
     &__btn {
         border: none;
         @extend %btn;
+    }
+}
+
+.related {
+    padding: 50px 0 120px;
+    &__title {
+        margin-bottom: 50px;
+    }
+    &__items {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        grid-column-gap: 30px;
+    }
+    .product-item__img-box {
+        padding: 5px 0;
     }
 }
