--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1888,6 +1888,7 @@
     margin-bottom: 40px;
     text-align: center;
     padding: 40px 25px;
+
     &__img {
         display: inline-block;
         width: 160px;
@@ -1895,24 +1896,30 @@
         object-fit: cover;
         margin: 0 auto 35px;
     }
+
     &__name {
         color: $title;
         font-size: 18px;
     }
+
     &__position {
         color: $accent;
         margin-bottom: 25px;
         @extend %roboto-700;
     }
+
     &__text {
         margin-bottom: 25px;
     }
+
     &__social-link {
         margin: 0 8px;
+
         path {
             fill: $default;
             transition: all .3s;
         }
+
         &:hover {
             path {
                 fill: $accent;
@@ -1925,6 +1932,7 @@
     padding: 35px 30px 40px;
     border: 1px solid #ececec;
     margin-bottom: 40px;
+
     &__title {
         color: $title;
         text-transform: uppercase;
@@ -1932,33 +1940,40 @@
         font-size: 22px;
         margin-bottom: 35px;
     }
+
     &__item {
         margin-bottom: 20px;
         display: flex;
-        & + .latest-post__item {
+
+        &+.latest-post__item {
             border-top: 1px solid #ececec;
             padding-top: 20px;
         }
     }
+
     &__img-link {
         display: block;
         margin-right: 20px;
         min-width: 80px;
     }
+
     &__img {
         width: 80px;
         height: 80px;
         object-fit: cover;
     }
+
     &__title-link {
         @extend %roboto-400;
         font-size: 18px;
         color: $title;
         line-height: 28px;
     }
+
     &__date {
         padding-left: 26px;
         position: relative;
+
         &::before {
             content: "";
             position: absolute;
@@ -1969,4 +1984,130 @@
             height: 16px;
         }
     }
+}
+
+.blog-one {
+    &__text {
+        h4 {
+            color: $title;
+            font-size: 22px;
+            @extend %roboto-700;
+            margin: 25px 0;
+        }
+
+        p {
+            margin: 25px 0;
+        }
+
+        blockquote {
+            background-color: $bg;
+            border-left: 3px solid $accent;
+            color: $title;
+            @extend %roboto-400;
+            font-size: 22px;
+            margin: 25px 0;
+            padding: 35px;
+        }
+        border: 1px solid #ececec;
+        border-top: none;
+        padding: 30px;
+        margin-top: -1px;
+    }
+    &__left-img {
+        float: left;
+        margin-right: 30px;
+        margin-bottom: 10px;
+    }
+    &__info {
+        display: flex;
+        margin-bottom: 25px;
+    }
+
+    &__info-link {
+        margin-right: 30px;
+        padding-left: 28px;
+        position: relative;
+
+        &::before {
+            content: "";
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 16px;
+            height: 16px;
+            background-image: url('../images/icons/calendar.svg');
+        }
+    }
+
+    &__info-link--comment::before {
+        background-image: url('../images/icons/blog-one-comment-icon.svg');
+        top: 3px;
+    }
+
+    &__info-link--author::before {
+        background-image: url('../images/icons/blog-one-user-icon.svg');
+    }
+    &__form-title {
+        text-transform: uppercase;
+        margin: 35px 0 25px;
+        color: $title;
+        font-size: 24px;
+        @extend %roboto-700;
+    }
+    .comments-form {
+        border-bottom: none;
+    }
+    &__box {
+        margin: 25px 0 35px;
+        display: flex;
+        justify-content: space-between;
+    }
+    &__tags,
+    &__share {
+        span {
+            text-transform: uppercase;
+            color: $title;
+            @extend %roboto-700;
+        }
+    }
+    &__share {
+        a {
+            margin-right: 12px;
+            vertical-align: middle;
+            &:hover {
+                path {
+                    fill: $accent;
+                }
+            }
+            path {
+                fill: #727272;
+            }
+        }
+    }
+    &__author {
+        border-bottom: 1px solid #ececec;
+        padding-bottom: 40px;
+        margin-bottom: 40px;
+        display: flex;
+    }
+    &__author-img {
+        width: 140px;
+        height: 140px;
+        margin-right: 30px;
+        object-fit: cover;
+    }
+    &__author-name {
+        margin-bottom: 24px;
+        font-size: 22px;
+        @extend %roboto-700;
+        color: $title;
+    }
+}
+
+.comments-title {
+    @extend %roboto-700;
+    color: $title;
+    margin-bottom: 25px;
+    font-size: 24px;
+    text-transform: uppercase;
 }
