--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -11,10 +11,14 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+        flex-wrap: wrap;
     }
 }
 
 .menu {
+    &__btn {
+        display: none;
+    }
     &__list {
         display: flex;
     }
@@ -78,7 +82,6 @@
     padding: 70px 0 40px;
     border-bottom: 1px solid #ececec;
     display: flex;
-
     &__contact {
         width: 250px;
         margin-right: 50px;
@@ -136,7 +139,9 @@
         line-height: 1;
         margin-bottom: 40px;
     }
-
+    &__form {
+        display: flex;
+    }
     &__link {
         margin-bottom: 14px;
         display: block;
@@ -150,6 +155,7 @@
         background-color: #fff;
         max-width: 320px;
         width: 100%;
+        margin-right: 3px;
         border: none;
         padding: 12px 10px 12px 15px;
         box-shadow: 0px 7px 20px 0px rgba(192, 192, 192, 0.3);
@@ -169,10 +175,11 @@
 
 
 .footer-bottom {
-    height: 200px;
+    min-height: 75px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap;
     font-size: 12px;
 
     &__accept-img {
@@ -2216,5 +2223,151 @@
     &__form-btn {
         @extend %btn;
         border: none;
+    }
+}
+
+
+
+@media(max-width: 1200px) {
+    .header {
+        &__inner {
+            padding-right: 10px;
+        }
+    }
+}
+
+@media(max-width: 1050px) {
+    .footer-top {
+        flex-wrap: wrap;
+        &__item-form {
+            max-width: 100%;
+            margin-top: 30px;
+        }
+    }
+}
+
+@media(max-width: 860px) {
+    .menu {
+        order: 1;
+        margin-left: 40px;
+        &__list {
+            transform: translateY(-200%);
+            position: absolute;
+            top: 120px;
+            width: 100%;
+            left: 0;
+            flex-direction: column;
+            align-items: center;
+            z-index: 5;
+            transition: all .3s;
+            background-color: #fff;
+            &.menu__list--active {
+                transform: translateY(0%);
+                transition: all .3s;
+            }
+        }
+        &__list-item + .menu__list-item {
+            padding-left: 15px;
+        }
+        &__list-item {
+            width: 100%;
+            padding: 0 15px;
+            text-align: center;
+        }
+        &__list-link {
+            padding: 12px 0;
+            display: block;
+        }
+        &__btn {
+            width: 30px;
+            height: 22px;
+            border: none;
+            background-color: transparent;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            position: relative;
+            padding: 0;
+            span {
+                width: 100%;
+                height: 3px;
+                background-color: $title; 
+            }
+            &::after,
+            &::before {
+                content: '';
+                position: absolute;
+                width: 100%;
+                height: 3px;
+                background-color: $title;
+            }
+            &::before {
+                top: 0;
+            }
+            &::after {
+                bottom: 0;
+            }
+        }
+    }
+    .user-nav {
+        margin-left: auto;
+    }
+    .footer-top {
+        &__contact {
+            width: 100%;
+            margin-right: 0;
+            margin-bottom: 30px;
+        }
+    }
+}
+
+@media(max-width: 620px) {
+    .footer-bottom {
+        justify-content: center;
+        &__copy {
+            width: 100%;
+            text-align: center;
+        }
+    }
+}
+
+@media(max-width: 500px) {
+    .header {
+        &__inner {
+            padding-right: 0;
+        }
+    }
+    .menu {
+        order: 0;
+        &__list {
+            top: 140px;
+        }
+    }
+    .user-nav {
+        width: 100%;
+        margin-top: 35px;
+        justify-content: flex-end;
+        padding-right: 15px;
+    }
+}
+
+@media(max-width: 450px) {
+    .footer-top {
+        &__nav {
+            margin-top: 30px;
+        }
+        &__form {
+            flex-wrap: wrap;
+        }
+        &__form-input {
+            max-width: 100%;
+            margin-right: 0;
+        }
+        &__form-btn {
+            width: 100%;
+        }
+        &__accept-img {
+            margin-left: 15px;
+        }
     }
 }
